--- a/five-week-homework/src/main/resources/application.properties
+++ b/five-week-homework/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&character
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+local.id=4
+local.name=autoConfigurationStudent
