先完成一部分

--- a/eighth-week-homework/.gitignore
+++ b/eighth-week-homework/.gitignore
@@ -36,3 +36,18 @@ build/
 /.mvn/wrapper/maven-wrapper.properties
 /.mvn/wrapper/MavenWrapperDownloader.java
 /.mvn/wrapper/maven-wrapper.jar
+/xa/.mvn/wrapper/maven-wrapper.jar
+/xa/.mvn/wrapper/maven-wrapper.properties
+/xa/.mvn/wrapper/MavenWrapperDownloader.java
+/xa/mvnw
+/xa/mvnw.cmd
+/xa-server1/.mvn/wrapper/maven-wrapper.jar
+/xa-server2/.mvn/wrapper/maven-wrapper.jar
+/xa-server1/.mvn/wrapper/maven-wrapper.properties
+/xa-server2/.mvn/wrapper/maven-wrapper.properties
+/xa-server1/.mvn/wrapper/MavenWrapperDownloader.java
+/xa-server2/.mvn/wrapper/MavenWrapperDownloader.java
+/xa-server1/mvnw
+/xa-server2/mvnw
+/xa-server1/mvnw.cmd
+/xa-server2/mvnw.cmd
