--- a/eighth-week-homework/tcc-server1/src/main/resources/application.properties
+++ b/eighth-week-homework/tcc-server1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8082
-spring.application.name=tcc-server2
+server.port=8081
+spring.application.name=xa-server1
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
