--- a/eighth-week-homework/tcc-server1/pom.xml
+++ b/eighth-week-homework/tcc-server1/pom.xml
@@ -9,17 +9,17 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>xa-server1</artifactId>
+    <artifactId>tcc-server1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>xa-server1</name>
-    <description>xa-server1</description>
+    <name>tcc-server1</name>
+    <description>tcc-server1</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>xa-server2</artifactId>
+            <artifactId>tcc-server2</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
