--- a/eighth-week-homework/.gitignore
+++ b/eighth-week-homework/.gitignore
@@ -57,3 +57,13 @@ build/
 /tcc-server1/.mvn/wrapper/MavenWrapperDownloader.java
 /tcc-server1/mvnw
 /tcc-server1/mvnw.cmd
+/tcc-server-1/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-2/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-1/.mvn/wrapper/maven-wrapper.properties
+/tcc-server-2/.mvn/wrapper/maven-wrapper.properties
+/tcc-server-1/.mvn/wrapper/MavenWrapperDownloader.java
+/tcc-server-2/.mvn/wrapper/MavenWrapperDownloader.java
+/tcc-server-1/mvnw
+/tcc-server-2/mvnw
+/tcc-server-1/mvnw.cmd
+/tcc-server-2/mvnw.cmd
