--- a/eighth-week-homework/.gitignore
+++ b/eighth-week-homework/.gitignore
@@ -67,3 +67,18 @@ build/
 /tcc-server-2/mvnw
 /tcc-server-1/mvnw.cmd
 /tcc-server-2/mvnw.cmd
+/eureka/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-1/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-2/.mvn/wrapper/maven-wrapper.jar
+/eureka/.mvn/wrapper/maven-wrapper.properties
+/eureka/.mvn/wrapper/MavenWrapperDownloader.java
+/eureka/mvnw
+/eureka/mvnw.cmd
+/eureka/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-1/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-2/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-2/tcc-server-2-api/.mvn/wrapper/maven-wrapper.jar
+/tcc-server-2/tcc-server-2-api/.mvn/wrapper/maven-wrapper.properties
+/tcc-server-2/tcc-server-2-api/.mvn/wrapper/MavenWrapperDownloader.java
+/tcc-server-2/tcc-server-2-api/mvnw
+/tcc-server-2/tcc-server-2-api/mvnw.cmd
