--- a/eighth-week-homework/tcc-server-1/pom.xml
+++ b/eighth-week-homework/tcc-server-1/pom.xml
@@ -19,8 +19,12 @@
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>tcc-server-2</artifactId>
+            <artifactId>tcc-server-2-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -30,6 +34,17 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>3.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-hystrix</artifactId>
+            <version>10.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
