--- a/eighth-week-homework/tcc-server-1/src/main/resources/application.properties
+++ b/eighth-week-homework/tcc-server-1/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8081
+spring.application.name=tcc-server-1
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.datasource.primary.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.primary.jdbc-url=jdbc:mysql://localhost:3306/test_1?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true&SSL=false
+spring.datasource.primary.username=root
+spring.datasource.primary.password=123456
+spring.datasource.primary.driver-class-name=com.mysql.jdbc.Driver
+
+feign.hystrix.enabled = false
+
+spring.main.allow-bean-definition-overriding=true
