--- a/eighth-week-homework/tcc-server-2/src/main/resources/application.properties
+++ b/eighth-week-homework/tcc-server-2/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+server.port=8081
+spring.application.name=tcc-server-2
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
