--- a/eighth-week-homework/tcc-server-1/src/main/resources/application.properties
+++ b/eighth-week-homework/tcc-server-1/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.applicati
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 spring.datasource.primary.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.primary.jdbc-url=jdbc:mysql://localhost:3306/test_1?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true&SSL=false
+spring.datasource.primary.jdbc-url=jdbc:mysql://localhost:3306/test_1
 spring.datasource.primary.username=root
 spring.datasource.primary.password=123456
 spring.datasource.primary.driver-class-name=com.mysql.jdbc.Driver
