--- a/eighth-week-homework/xa-test/xa-server-1/src/main/resources/application.properties
+++ b/eighth-week-homework/xa-test/xa-server-1/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 mybatis.mapper-locations=classpath:mapper/*.xml
 spring.shardingsphere.datasource.names=ds0,ds1
 spring.shardingsphere.datasource.ds0.type=com.zaxxer.hikari.HikariDataSource
@@ -5,6 +6,7 @@ spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://localhost:3306/test_1
 spring.shardingsphere.datasource.ds0.username=root
 spring.shardingsphere.datasource.ds0.password=123456
 spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.jdbc.Driver
+
 spring.shardingsphere.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds1.jdbc-url=jdbc:mysql://localhost:3307/test_1?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true&SSL=true
 spring.shardingsphere.datasource.ds1.username=root
