--- a/ninth-week-homework/rpc01/rpcfx-core/pom.xml
+++ b/ninth-week-homework/rpc01/rpcfx-core/pom.xml
@@ -23,7 +23,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.70</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.36.Final</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
