--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-1/src/main/resources/hmily.yml
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-1/src/main/resources/hmily.yml
@@ -27,9 +27,9 @@ hmily:
 repository:
   database:
     driverClassName: com.mysql.jdbc.Driver
-    url : jdbc:mysql://127.0.0.1:3307/test_1?useUnicode=true&characterEncoding=utf8
+    url : jdbc:mysql://127.0.0.1:3306/test_1?useUnicode=true&characterEncoding=utf8
     username: root
-    password:
+    password: 123456
     maxActive: 20
     minIdle: 10
     connectionTimeout: 30000
