--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/pom.xml
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/pom.xml
@@ -18,10 +18,6 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId></groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -34,6 +30,11 @@
         <dependency>
             <groupId>org.dromara</groupId>
             <artifactId>hmily-spring-boot-starter-dubbo</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.dromara</groupId>
+            <artifactId>hmily-dubbo</artifactId>
             <version>2.1.1</version>
         </dependency>
         <dependency>
