--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/pom.xml
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/pom.xml
@@ -33,6 +33,11 @@
             <version>2.1.1</version>
         </dependency>
         <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>tcc-server-2-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.dromara</groupId>
             <artifactId>hmily-dubbo</artifactId>
             <version>2.1.1</version>
