--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/src/main/resources/application.properties
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://localhost:3307/test_1?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true&SSL=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+hmily.support.rpc.annotation = true 
