第九周作业

--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-1/src/main/resources/application.properties
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-1/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 server.port=8080
 mybatis.mapper-locations=classpath:mapper/*.xml
-
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/test_1?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true&SSL=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-hmily.support.rpc.annotation = true 
+hmily.support.rpc.annotation=true 
+spring.dubbo.application.name=tcc-server-1
+spring.dubbo.registry.address=zookeeper://localhost
+#???????
+spring.dubbo.registry.port=2180 
+spring.dubbo.protocol.name=dubbo
+#dubbo???????
+spring.dubbo.protocol.port=20891
+spring.dubbo.scan=com.example.tccserver1.service
