--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/src/main/resources/application.properties
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 hmily.support.rpc.annotation = true 
+
+
+spring.dubbo.application.name = tcc-server-2
+spring.dubbo.registry.address= zookeeper://localhost
+#???????
+spring.dubbo.registry.port= 2181 
+spring.dubbo.protocol.name= dubbo
+#dubbo???????
+spring.dubbo.protocol.port= 20890
+spring.dubbo.scan= com.example.tccserver2.service
