--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-1/src/main/resources/application.properties
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-1/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 mybatis.mapper-locations=classpath:mapper/*.xml
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/test_1?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true&SSL=true
@@ -6,11 +6,13 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 hmily.support.rpc.annotation=true 
-spring.dubbo.application.name=tcc-server-1
-spring.dubbo.registry.address=zookeeper://localhost
-#???????
-spring.dubbo.registry.port=2181 
-spring.dubbo.protocol.name=dubbo
-#dubbo???????
-spring.dubbo.protocol.port=20890
-spring.dubbo.scan=com.example.tccserver1.service
+#????/?????
+dubbo.application.name=tcc-server-1
+#??????????
+dubbo.registry.protocol=zookeeper
+dubbo.registry.address=127.0.0.1:2181
+#?????????????
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+#??????
+dubbo.monitor.protocol=registry
