--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/pom.xml
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.alibaba.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>0.2.1.RELEASE</version>
+            <version>0.2.0</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -64,6 +64,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
         </dependency>
     </dependencies>
 
