--- a/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/src/main/resources/application.properties
+++ b/ninth-week-homework/dubbo-hmily-tcc/tcc-server-2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8082
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 
@@ -8,14 +8,17 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-hmily.support.rpc.annotation = true 
+hmily.support.rpc.annotation = true
 
-
-spring.dubbo.application.name = tcc-server-2
-spring.dubbo.registry.address= zookeeper://localhost
-#???????
-spring.dubbo.registry.port= 2181 
-spring.dubbo.protocol.name= dubbo
-#dubbo???????
-spring.dubbo.protocol.port= 20891
-spring.dubbo.scan= com.example.tccserver2.service
+#????/?????
+dubbo.application.name=tcc-server-2
+#??????????
+dubbo.registry.protocol=zookeeper
+dubbo.registry.address=127.0.0.1:2181
+#?????????????
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+#??????
+dubbo.monitor.protocol=registry
+#????????? @EnableDubbo ??
+##dubbo.scan.base-packages=com.zang.gmall
