--- a/twelveth-week-homework/src/main/resources/application.properties
+++ b/twelveth-week-homework/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
+# ?????ActiveMQ
+spring.activemq.in-memory=true
+# ?????????????????pom???activemq-pool???spring.activemq.pool.enabled=false
+# ?????ActiveMQ#spring.activemq.broker-url=tcp://127.0.0.1:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
 
+#????
+spring.jms.pub-sub-domain=true
